Update dev container to pin SDK versions and persist user profile.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,9 @@
 FROM mcr.microsoft.com/devcontainers/base:jammy
 
+VOLUME [ "/home/vscode", "/home/vscode/.vscode-server", "/src" ]
+
 USER root
 
-RUN mkdir -p /src && chown -R vscode:vscode /src
+RUN mkdir -p /src && chown -R vscode:vscode /src && \
+    mkdir -p /home/vscode && chown -R vscode:vscode /home/vscode && \
+    mkdir -p /home/vscode/.vscode-server && chown -R vscode:vscode /home/vscode/.vscode-server
