Add partial-diff extension.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,6 +33,7 @@
                 "GitHub.copilot-chat",
                 "humao.rest-client",
                 "ms-dotnettools.csdevkit",
+                "ryu1kn.partial-diff",
                 "stkb.rewrap"
             ]
         }
